--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.2"
+		"react-dom": "^15.6.1",
+		"react-native": "0.47.2",
+		"react-redux": "^5.0.6",
+		"react-router-dom": "^4.2.2",
+		"react-router-native": "^4.2.0",
+		"redux": "^3.7.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
